# ChangeLog file for monetdb-java
# This file is updated with Maddlog

* Thu Jan 28 2021 Martin van Dinther <martin.van.dinther@monetdbsolutions.com>
- Corrected the ordering of the output of DatabaseMetaData methods
  getImportedKeys(), getExportedKeys() and getCrossReference(). In cases
  where a table would have multiple fks to the same external table,
  the output was not as expected. This has been corrected, so the columns
  now appear in the order as defined in the creation of the fks.

* Thu Jan 28 2021 Martin van Dinther <martin.van.dinther@monetdbsolutions.com>
- The dumping of table definitions from JdbcClient program has been
  improved. It now includes the ON UPDATE and ON DELETE rules for foreign
  key constraints. Also it no longer generates CREATE INDEX statements
  for foreign key constraints whose name is not system generated but
  user specified.

* Thu Jan 14 2021 Martin van Dinther <martin.van.dinther@monetdbsolutions.com>
- Improved DatabaseMetaData.getTypeInfo() output for temporal data
  types: sec_interval, day_interval, month_interval, date, time, timetz,
  timestamp and timestamptz.

* Wed Jan  6 2021 Martin van Dinther <martin.van.dinther@monetdbsolutions.com>
- Corrected output of resultset columns UPDATE_RULE and DELETE_RULE
  when calling DatabaseMetaData API methods getImportedKeys() or
  getExportedKeys() or getCrossReference(). These columns used to
  always return DatabaseMetaData.importedKeyNoAction but now they
  can also report the other values when set:
     DatabaseMetaData.importedKeyCascade
  or DatabaseMetaData.importedKeyRestrict
  or DatabaseMetaData.importedKeySetNull
  or DatabaseMetaData.importedKeySetDefault.

* Thu Nov 12 2020 Martin van Dinther <martin.van.dinther@monetdbsolutions.com>
- Moved Java classes from packages starting with nl.cwi.monetdb.*
  to package org.monetdb.* This naming complies to the Java Package
  Naming convention as MonetDB's main website is www.monetdb.org.